[gd_scene load_steps=20 format=3 uid="uid://cno3vdadp5b0g"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jwkv5"]
[ext_resource type="PackedScene" uid="uid://b08diri682s7d" path="res://scenes/player.tscn" id="1_rpn6i"]
[ext_resource type="PackedScene" uid="uid://b1eahi4ikwghm" path="res://scenes/wall.tscn" id="2_5o6eb"]
[ext_resource type="PackedScene" uid="uid://dvjjo2s82qu78" path="res://scenes/main_menu.tscn" id="3_n6cq5"]
[ext_resource type="PackedScene" uid="uid://bh1eav5s4mk" path="res://scenes/crowd.tscn" id="4_4u4wr"]
[ext_resource type="PackedScene" uid="uid://bifds7lysb2w1" path="res://scenes/hud.tscn" id="4_jmeuw"]
[ext_resource type="PackedScene" uid="uid://cibqy44jwtoio" path="res://assets/models/ring_wall.blend" id="5_nm1mj"]
[ext_resource type="PackedScene" uid="uid://blp70yfde453a" path="res://scenes/scoreboard.tscn" id="8_nfywx"]
[ext_resource type="AudioStream" uid="uid://dfblbnsv576v" path="res://assets/audio/bg.mp3" id="9_4dy30"]
[ext_resource type="AudioStream" uid="uid://dhan31pj8xrlj" path="res://assets/audio/win.wav" id="10_jfjry"]
[ext_resource type="AudioStream" uid="uid://815g8r6ktwei" path="res://assets/audio/loss.wav" id="11_ghsgt"]

[sub_resource type="Animation" id="Animation_t1y2q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.523599, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraAnchor:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3, 3, 3)]
}

[sub_resource type="Animation" id="Animation_4a1jx"]
resource_name = "begin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector3(-0.523599, -1.5708, 0), Vector3(-0.0872665, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraAnchor:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, -0.5),
"update": 0,
"values": [Vector3(3, 3, 3), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jggp8"]
_data = {
"RESET": SubResource("Animation_t1y2q"),
"begin": SubResource("Animation_4a1jx")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2mmq3"]
albedo_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
metallic = 1.0
roughness = 0.51

[sub_resource type="PrismMesh" id="PrismMesh_1di1e"]
material = SubResource("StandardMaterial3D_2mmq3")
flip_faces = true
size = Vector3(50, 50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a3jgi"]
albedo_color = Color(0.709804, 1, 0.721569, 1)
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_peen5"]
material = SubResource("StandardMaterial3D_a3jgi")
size = Vector3(10, 10, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_xmkgl"]
size = Vector3(1000, 1, 1000)

[node name="Main" type="Node3D"]
script = ExtResource("1_jwkv5")
wall_scene = ExtResource("2_5o6eb")

[node name="MainMenu" parent="." instance=ExtResource("3_n6cq5")]

[node name="HUD" parent="." instance=ExtResource("4_jmeuw")]
mouse_filter = 2

[node name="FightTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="CameraAnchor" type="Node3D" parent="."]
transform = Transform3D(-1.086e-05, 1.5, -2.59808, 0, 2.59808, 1.5, 3, 5.42999e-06, -9.40501e-06, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="CameraAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraAnchor"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_jggp8")
}

[node name="Player" parent="." instance=ExtResource("1_rpn6i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="CPU" parent="." instance=ExtResource("1_rpn6i")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2.5)
player = 2

[node name="Stadium" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PrismMesh_1di1e")

[node name="Light1" type="DirectionalLight3D" parent="Stadium"]
transform = Transform3D(0.707107, -0.5, 0.5, -9.27259e-08, -0.707107, -0.707107, 0.707107, 0.5, -0.5, 10, -10, -10)
light_energy = 0.25
light_angular_distance = 0.5
directional_shadow_mode = 0

[node name="Light2" type="DirectionalLight3D" parent="Stadium"]
transform = Transform3D(-0.707107, -0.5, 0.5, 9.83521e-09, -0.707107, -0.707107, 0.707107, -0.5, 0.5, 10, -10, 10)
light_energy = 0.25
light_angular_distance = 0.5
directional_shadow_mode = 0

[node name="Light3" type="DirectionalLight3D" parent="Stadium"]
transform = Transform3D(-0.707107, 0.5, -0.5, 9.83521e-09, -0.707107, -0.707107, -0.707107, -0.5, 0.5, -10, -10, 10)
light_energy = 0.25
light_angular_distance = 0.5
directional_shadow_mode = 0

[node name="Light4" type="DirectionalLight3D" parent="Stadium"]
transform = Transform3D(0.707107, 0.5, -0.5, -1.34873e-07, -0.707107, -0.707107, -0.707107, 0.5, -0.5, -10, -10, -10)
light_energy = 0.25
light_angular_distance = 0.5
directional_shadow_mode = 0

[node name="Floor" type="StaticBody3D" parent="Stadium"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)

[node name="FloorMesh" type="MeshInstance3D" parent="Stadium/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
mesh = SubResource("BoxMesh_peen5")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stadium/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_xmkgl")

[node name="Stands" type="Node3D" parent="Stadium"]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, -1, 0)

[node name="Crowd" parent="Stadium/Stands" instance=ExtResource("4_4u4wr")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, 0)

[node name="Crowd2" parent="Stadium/Stands" instance=ExtResource("4_4u4wr")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, 10)
occupancy = 0.6

[node name="Crowd4" parent="Stadium/Stands" instance=ExtResource("4_4u4wr")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, -10)
occupancy = 0.6

[node name="Crowd5" parent="Stadium/Stands" instance=ExtResource("4_4u4wr")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, -20)
occupancy = 0.4

[node name="Crowd3" parent="Stadium/Stands" instance=ExtResource("4_4u4wr")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, 20)
occupancy = 0.4

[node name="RingWall" parent="Stadium" instance=ExtResource("5_nm1mj")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="Scoreboard" parent="Stadium" instance=ExtResource("8_nfywx")]
transform = Transform3D(4.37114e-08, -7.10543e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, -14, -6, 0)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4dy30")
autoplay = true

[node name="WinStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jfjry")

[node name="LoseStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ghsgt")

[connection signal="campaign" from="MainMenu" to="." method="_on_main_menu_campaign"]
[connection signal="mute_audio" from="MainMenu" to="." method="_on_main_menu_mute_audio"]
[connection signal="mute_music" from="MainMenu" to="." method="_on_main_menu_mute_music"]
[connection signal="vs_cpu" from="MainMenu" to="." method="_on_main_menu_vs_cpu"]
[connection signal="vs_player" from="MainMenu" to="." method="_on_main_menu_vs_player"]
[connection signal="main_menu" from="HUD" to="." method="_on_hud_main_menu"]
[connection signal="next_fight" from="HUD" to="." method="_on_hud_next_fight"]
[connection signal="timeout" from="FightTimer" to="." method="_on_fight_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="hit" from="CPU" to="." method="_on_cpu_hit"]
